01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catalogue-ns
  labels:
    project: roboshop
    environment: dev
