02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: catalogue-pod
  labels:
    project: roboshop
    environment: dev
spec:
  containers:
  - name: catalogue-nginx-container
    image: nginx
