04-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: catalogue-pod
  labels:
    purpose: labels-demo
    project: roboshop
    environment: dev
    tier: backend
spec:
  containers:
  - name: catalogue-nginx-container
    image: nginx
