06-resource-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-limits
  labels:
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
