07-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-variables
  labels:
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
