11-secrets-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
  labels:
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
