12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    purpose: services-demo
spec:
  selector:   # Selects Pods with the label 'project: roboshop, environment: dev, tier: frontend'
    project: roboshop
    environment: dev
    tier: frontend      
  ports:
    - protocol: TCP
      port: 80        # The port the Service itself exposes
      targetPort: 80 # container port
  type: ClusterIP

  ---

apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    project: roboshop
    environment: dev
    tier: frontend
spec:
  containers:
  - name: nginx
    image: nginx
